@@ -353,13 +353,13 @@ L<https://github.com/michal-josef-spacek/Person::ID::CZ::RC::Generator>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© Michal Špaček 2013-2015
+© Michal Josef Špaček 2013-2015
 
 BSD 2-Clause License
 
