@@ -151,12 +151,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Person::ID::CZ::RC::Generator>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Špaček 2013-2015
+    © Michal Josef Špaček 2013-2015
 
     BSD 2-Clause License
 
